force-app/main/default/objects/Log__c/fields/CPU_Time_Used__c.field-meta.xml
<CustomField>
    <fullName>CPU_Time_Used__c</fullName>
    <formula>CPU_Time__c/CPU_Time_Limit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPU Time Used</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>