force-app/main/default/objects/Log__c/fields/DML_Rows__c.field-meta.xml
<CustomField>
    <fullName>DML_Rows__c</fullName>
    <label>DML Rows</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>