force-app/main/default/objects/Log__c/fields/DML_Rows_Used__c.field-meta.xml
<CustomField>
    <fullName>DML_Rows_Used__c</fullName>
    <formula>DML_Rows__c/DML_Rows_Limit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DML Rows Used</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>