force-app/main/default/objects/Log__c/fields/DML_Statements_Used__c.field-meta.xml
<CustomField>
    <fullName>DML_Statements_Used__c</fullName>
    <formula>DML_Statements__c/DML_Statements_Limit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DML Statements Used</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>