force-app/main/default/objects/Log__c/fields/Heap_Size_Used__c.field-meta.xml
<CustomField>
    <fullName>Heap_Size_Used__c</fullName>
    <formula>Heap_Size__c/Heap_Size_Limit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Heap Size Used</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>