force-app/main/default/objects/Log__c/fields/Is_Batch__c.field-meta.xml
<CustomField>
    <fullName>Is_Batch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Batch</label>
    <type>Checkbox</type>
</CustomField>