force-app/main/default/objects/Log__c/fields/Is_Future__c.field-meta.xml
<CustomField>
    <fullName>Is_Future__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Future</label>
    <type>Checkbox</type>
</CustomField>