force-app/main/default/objects/Log__c/fields/Is_Queueable__c.field-meta.xml
<CustomField>
    <fullName>Is_Queueable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Queueable</label>
    <type>Checkbox</type>
</CustomField>