force-app/main/default/objects/Log__c/fields/Queries_Limit__c.field-meta.xml
<CustomField>
    <fullName>Queries_Limit__c</fullName>
    <label>Queries Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>