force-app/main/default/objects/Log__c/fields/Queries_Used__c.field-meta.xml
<CustomField>
    <fullName>Queries_Used__c</fullName>
    <formula>Queries__c / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Queries Used</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>