force-app/main/default/objects/Log__c/fields/Query_Rows_Used__c.field-meta.xml
<CustomField>
    <fullName>Query_Rows_Used__c</fullName>
    <formula>Query_Rows__c/Query_Rows_Limit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Query Rows Used</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>