force-app/main/default/objects/Log__c/fields/Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Request_Id__c</fullName>
    <label>Request Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>