force-app/main/default/objects/Log__c/recordTypes/DEBUG.recordType-meta.xml
<RecordType>
    <fullName>DEBUG</fullName>
    <active>true</active>
    <label>DEBUG</label>
</RecordType>