force-app/main/default/objects/Log__c/recordTypes/Debug_Log.recordType-meta.xml
<RecordType>
    <fullName>Debug_Log</fullName>
    <active>true</active>
    <label>Debug Log</label>
</RecordType>