force-app/main/default/objects/Log__c/recordTypes/ERROR.recordType-meta.xml
<RecordType>
    <fullName>ERROR</fullName>
    <active>true</active>
    <label>ERROR</label>
</RecordType>