force-app/main/default/objects/Log__c/recordTypes/Error_Log.recordType-meta.xml
<RecordType>
    <fullName>Error_Log</fullName>
    <active>true</active>
    <label>Error Log</label>
</RecordType>