force-app/main/default/objects/Log__c/recordTypes/Exception_Log.recordType-meta.xml
<RecordType>
    <fullName>Exception_Log</fullName>
    <active>true</active>
    <label>Exception Log</label>
</RecordType>