force-app/main/default/objects/Log__c/recordTypes/Execution_Log.recordType-meta.xml
<RecordType>
    <fullName>Execution_Log</fullName>
    <active>true</active>
    <label>Execution Log</label>
</RecordType>