force-app/main/default/objects/Log__c/recordTypes/Exeption_Log.recordType-meta.xml
<RecordType>
    <fullName>Exeption_Log</fullName>
    <active>true</active>
    <label>Exeption Log</label>
</RecordType>