force-app/main/default/objects/Log__c/recordTypes/WARN.recordType-meta.xml
<RecordType>
    <fullName>WARN</fullName>
    <active>true</active>
    <label>WARN</label>
</RecordType>