force-app/main/default/objects/Log__c/recordTypes/Warning_Log.recordType-meta.xml
<RecordType>
    <fullName>Warning_Log</fullName>
    <active>true</active>
    <label>Warning Log</label>
</RecordType>