force-app/main/default/objects/Log__c/listViews/All_Logs.listView-meta.xml
<ListView>
    <fullName>All_Logs</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Time__c</columns>
    <columns>Quiddity__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Message__c</columns>
    <columns>Data__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Logs</label>
</ListView>